@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- The JSON plugin now uses JSON::MaybeXS instead of JSON.pm. Patch by Greg
+  Oschwald. GitHub #37.
+
+
 0.27     2015-07-04
 
 [BUG FIXES]
